2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * client/Makefile.am:
        * client/gdaemonvfs.c:
        * client/sftpuri.c: Added.
	Added sftp uri mapper that aliases ssh: to sftp: (#509860)
	
        * client/smburi.c:
        (smb_from_uri):
	Fix leak.

2008-01-21  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.c:
	Do the initial mount tracker call sync so that
	the volume monitor is populated with the current
	status after construction. This is more in-line
	with what apps expect.

2008-01-18  Alexander Larsson  <alexl@redhat.com>

        * common/gmountspec.c:
        (g_mount_spec_new_from_data):
	Ensure that mount_prefix is never NULL. It
	should be "/" in that case.

2008-01-18  Luca Ferretti  <elle.uca@libero.it>

	* programs/Makefile.am:
	* programs/gvfs-cat.c: (cat), (main):
	Add i18n/l10n to gvfs-cat, plus indentation. For details see
	http://mail.gnome.org/archives/gnome-vfs-list/2008-January/msg00020.html

2008-01-18  David Zeuthen  <davidz@redhat.com>

	The volume monitor bits of gphoto2 support. The actual backend
	will follow later. Right now the code is only enabled on Linux,
	need trivial changes to work on other operating systems.

	* hal/ghalvolume.c: (do_update_from_hal_for_camera),
	(update_from_hal), (g_hal_volume_new):
	* hal/ghalvolumemonitor.c: (get_hal_pool),
	(g_hal_volume_monitor_finalize), (get_volumes),
	(mountpoints_changed), (mounts_changed),
	(g_hal_volume_monitor_force_update), (hal_changed),
	(g_hal_volume_monitor_constructor), (find_camera_volume_by_udi),
	(update_cameras):
	* hal/ghalvolumemonitor.h:
	* hal/hal-pool.c: (hal_pool_finalize), (has_cap_only),
	(hal_pool_add_device_by_udi),
	(hal_pool_add_device_by_udi_and_properties), (hal_pool_new):
	* hal/hal-pool.h:

2008-01-17  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Disconnect signal handler, since the data struct we pass
	into the signal handler will be invalid after the mount
	is finished.
